...
        android:text="From:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <EditText
        android:id="@+id/fromEditInput"
        android:layout_width="260dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="To:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_" />

    <EditText
        android:id="@+id/toEditInput"
        android:layout_width="280dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Pick Up:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_" />

    <EditText
        android:id="@+id/pickupEditInput"
        android:layout_width="232dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Date:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickup_" />

    <EditText
        android:id="@+id/dateEditInput"
        android:layout_width="266dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Time:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_" />

    <EditText
        android:id="@+id/timeEditInput"
        android:layout_width="263dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Seats:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_" />

    <EditText
        android:id="@+id/seatsEditInput"
        android:layout_width="256dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Price:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seats_" />

    <EditText
        android:id="@+id/priceEditInput"
        android:layout_width="260dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Additional:"
        android:textAppearance="@style/additional_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditInput" />

    <CheckBox
        android:id="@+id/checkBoxRoundTrip"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="11dp"
        android:text="Round Trip"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_" />

    <CheckBox
        android:id="@+id/checkBoxNoSmoke"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="11dp"
        android:checked="false"
        android:elevation="4dp"
...
        android:textColor="#C8102E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRoundTrip" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditTrip"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_green_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="Edit"
...
        android:background="#C8102E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/house_navBtn"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:background="@drawable/icon_home_h"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trips_navBtn"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:background="@drawable/icon_road"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/house_navBtn"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/messages_navBtn"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="22dp"
        android:background="@drawable/icon_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileBtn"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <ImageView
        android:id="@+id/plus_solid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
        app:layout_constraintStart_toStartOf="@+id/btnCreate"
        app:layout_constraintTop_toTopOf="@+id/btnCreate"
        app:srcCompat="@drawable/icon_plus" />

    <ImageView
...
