...
        android:background="#C8102E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/searchBarClosed"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="#F1BE48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <LinearLayout
        android:id="@+id/searchBarExpanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1BE48"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3">

        <EditText
            android:id="@+id/fromSearchInput"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/btn_white_square"
            android:fontFamily="@font/proximanova_extrabold"
            android:hint="From..."
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/toSearchInput"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/btn_white_square"
            android:fontFamily="@font/proximanova_extrabold"
            android:hint="To..."
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchBtn"
            android:layout_width="78dp"
            android:layout_height="25dp"
            android:background="@drawable/btn_red_square"
            android:fontFamily="@font/proximanova_extrabold"
            android:text="Search"
            android:textColor="#FFFFFF"
...
        android:textAppearance="@style/trips_near_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/searchBarToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchBarClosed"
...
        android:background="#C8102E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/house_navBtn_h"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:background="@drawable/icon_home_h"
...
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBarClosed">

        <LinearLayout
            android:id="@+id/trip_Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
