...
        android:text="From:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />

    <EditText
        android:id="@+id/fromCreateInput"
        android:layout_width="260dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="To:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_" />

    <EditText
        android:id="@+id/toCreateInput"
        android:layout_width="280dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Pick Up:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_" />

    <EditText
        android:id="@+id/pickupCreateInput"
        android:layout_width="232dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Date:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickup_" />

    <EditText
        android:id="@+id/dateCreateInput"
        android:layout_width="266dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Time:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_" />

    <EditText
        android:id="@+id/timeCreateInput"
        android:layout_width="263dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Seats:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_" />

    <EditText
        android:id="@+id/seatsCreateInput"
        android:layout_width="256dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:text="Price:"
        android:textAppearance="@style/input_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seats_" />

    <EditText
        android:id="@+id/priceCreateInput"
        android:layout_width="260dp"
        android:layout_height="33.41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_white_square"
        android:elevation="4dp"
...
        android:textColor="#C8102E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRoundTrip" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateTrip"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_green_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="Create"
...
