...
        android:textSize="78sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/redrectangle" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <EditText
        android:id="@+id/password1Input"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/password2Input"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:ems="10"
        android:fontFamily="@font/proximanova_extrabold"
...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1Input" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_gray_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:paddingLeft="13dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2Input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmSignUp"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/btn_blue_square"
        android:fontFamily="@font/proximanova_extrabold"
        android:text="Sign Up"
...
